--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -679,6 +679,7 @@ done
 
 {{#
     Disable prelinking in sysconfig
+
 #}}
 {{%- macro bash_disable_prelink() -%}}
 # prelink not installed
@@ -703,6 +704,7 @@ fi
     Macro to configure DConf settings for RHEL and Fedora systems.
 
     If files contain ibus or distro, ignore them.
+
 #}}
 {{%- macro bash_dconf_settings(path, key, value, db, setting_file) -%}}
 # Check for setting in any of the DConf db directories
@@ -1002,6 +1004,7 @@ authselect enable-feature {{{ feature }}}
     Enable pam_faillock.so PAM module using authselect.
     If an authselect profile is not selected or the selected profile is not intact, the operation is aborted.
     If the operation is aborted, an informative message is shown in the remediation report.
+
 #}}
 {{%- macro bash_enable_pam_faillock_with_authselect() -%}}
 {{{ bash_enable_authselect_feature('with-faillock') }}}
@@ -1011,6 +1014,7 @@ authselect enable-feature {{{ feature }}}
 {{#
     Enable pam_faillock.so PAM module by directly editing PAM files.
     This option is only recommended when authselect tool is not available for the system.
+
 #}}
 {{%- macro bash_enable_pam_faillock_directly_in_pam_files() -%}}
 {{% if 'ubuntu' in product %}}
@@ -1061,6 +1065,7 @@ fi
     context. This sequence of commands is used in multiple PAM related macros.
 
     :param pam_file:    PAM config file.
+
 #}}
 {{%- macro bash_ensure_pam_variables_and_authselect_profile(pam_file) -%}}
 {{{ bash_check_authselect_integrity() }}}
@@ -1215,6 +1220,7 @@ fi
 :param message: The message to print.
 :param rc: The error code (optional, default is 1)
 :param action: What to do (optional, default is 'exit', can be also 'return' or anything else)
+
 #}}
 {{% macro die(message, rc=1, action="exit") -%}}
 printf '%s\n' "{{{ message | replace('"', '\\"') }}}" >&2
@@ -1433,8 +1439,8 @@ fi
 {{%- endmacro %}}
 
 {{#
-  # Check whether or not a package is installed.
-  #}}
+    Check whether or not a package is installed.
+#}}
 {{%- macro bash_package_installed(pkgname) -%}}
 {{%- if pkg_manager == "apt_get" -%}}
 dpkg-query --show --showformat='${db:Status-Status}\n' "{{{ pkgname }}}" 2>/dev/null | grep -q installed
@@ -1450,6 +1456,7 @@ rpm --quiet -q "{{{ pkgname }}}"
     This macro gets the var cce_identifiers from the environment created by the build scripts.
     The cce_identifiers is a dictionary that contains either the 'cce':'CCENUM' record for the
     product this remediation is being built for, or it is empty.
+
 #}}
 {{%- macro set_cce_value() -%}}
 {{% if cce_identifiers and 'cce' in cce_identifiers -%}}
@@ -1517,6 +1524,7 @@ fi
 
 {{#
     Macro to restrict permissions in home directories of interactive users.
+
 #}}
 {{%- macro bash_restrict_permissions_home_directories(recursive=false) -%}}
 for home_dir in $(awk -F':' '{ if ($3 >= {{{ uid_min }}} && $3 != {{{ nobody_uid }}}) print $6 }' /etc/passwd); do
@@ -1567,6 +1575,7 @@ Ensures that given mount point is in :code:`/etc/fstab`.
     :param mount_opt:   mount point option whose presence in /etc/fstab we are ensuring
     :param fs_spec:     identification of the filesystem to be mounted (LABEL, UUID, device name etc.)
     :param type:        mount type of mount point (used when adding new entry in fstab)
+
 #}}
 {{% macro bash_ensure_mount_option_in_fstab(mount_point, mount_opt, fs_spec, type) -%}}
 mount_point_match_regexp="$(printf "[[:space:]]%s[[:space:]]" {{{ mount_point }}})"
@@ -1586,13 +1595,14 @@ fi
 {{%- endmacro %}}
 
 {{#
-  # Check whether mount_point is present in /etc/fstab; print err to stderr and return 1 if not
-  #}}
+    Check whether mount_point is present in /etc/fstab; print err to stderr and return 1 if not
+
+#}}
 {{% macro bash_assert_mount_point_in_fstab(mount_point) -%}}
 mount_point_match_regexp="$(printf "[[:space:]]%s[[:space:]]" "{{{ mount_point }}}")"
 {{#
-# This macro gets expanded to code that will return 1 if MOUNTPOINT is not in /etc/fstab;
-# This is consistent with the behavior prior to converting this function to a jinja macro
+    This macro gets expanded to code that will return 1 if MOUNTPOINT is not in /etc/fstab;
+    This is consistent with the behavior prior to converting this function to a jinja macro
 #}}
 grep "$mount_point_match_regexp" -q /etc/fstab \
     || { echo "The mount point '{{{ mount_point }}}' is not even in /etc/fstab, so we can't set up mount options" >&2;
@@ -1600,9 +1610,10 @@ grep "$mount_point_match_regexp" -q /etc/fstab \
 {{%- endmacro %}}
 
 {{#
-  # Ensure that partition is mounted at mount_point with correct options, but only if the partition
-  # is already mounted.
-  #}}
+  Ensure that partition is mounted at mount_point with correct options, but only if the partition
+  is already mounted.
+
+#}}
 {{% macro bash_ensure_partition_is_mounted(mount_point) -%}}
 if mkdir -p "{{{ mount_point }}}"; then
     if mountpoint -q "{{{ mount_point }}}"; then
@@ -1849,6 +1860,7 @@ Part of the grub2_bootloader_argument template.
 
 {{#
     Ensures that /etc/default/grub file does not contain the arg_name_value.
+
 :param arg_name: name of the grub parameter, e.g.: "audit"
 
 #}}
@@ -1884,6 +1896,7 @@ respects `platform_package_overrides` variable.
 :param package: package name
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param ver: package version (optional argument, use together with "op")
+
 #}}
 {{%- macro bash_pkg_conditional(package, op=None, ver=None) -%}}
 {{%- if package in platform_package_overrides -%}}
@@ -1904,6 +1917,7 @@ JINJA MACRO ERROR - Unknown package system '{{{ pkg_system }}}'.
 This macro generates code that gets version of an installed RPM package.
 
 :param package: package name
+
 #}}
 {{%- macro bash_get_rpm_package_version(package) -%}}
 $(epoch=$(rpm -q --queryformat '%{EPOCH}' {{{ package }}}); version=$(rpm -q --queryformat '%{VERSION}' {{{ package }}}); [ "$epoch" = "(none)" ] && echo "0:$version" || echo "$epoch:$version")
@@ -1935,6 +1949,7 @@ https://www.gnu.org/software/coreutils/manual/coreutils.html#Version-sort-orderi
 :param real: real package version
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param expected: expected package version
+
 #}}
 {{%- macro bash_pkg_conditional_compare(real, op, expected) -%}}
 { real="{{{ real }}}"; expected="{{{ expected }}}"; {{{ bash_compare_version("$real", op, "$expected") }}}; }
@@ -1952,6 +1967,7 @@ Assumptions:
 :param real: real package version
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param expected: expected package version
+
 #}}
 {{%- macro bash_compare_version(real, op, expected) -%}}
 {{%- if op == "<" -%}}
@@ -1976,6 +1992,7 @@ This macro creates a Bash conditional which uses rpm to check if a package passe
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param ver: package version (optional argument, use together with "op")
     The version always needs to contain epoch. If the package has no epoch, please prepend "0:".
+
 #}}
 {{%- macro bash_pkg_conditional_rpm(package, op=None, ver=None) -%}}
 {{%- if ver -%}}
@@ -1989,6 +2006,7 @@ rpm --quiet -q {{{ package }}}
 This macro generates code that gets version of an installed DEB package.
 
 :param package: package name
+
 #}}
 {{%- macro bash_get_dpkg_package_version(package) -%}}
 {{# We don't take the "release" part into account. #}}
@@ -2002,6 +2020,7 @@ with a given version.
 :param package: package name
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param ver: package version (optional argument, use together with "op")
+
 #}}
 {{%- macro bash_compare_version_dpkg(package, op, ver) -%}}
 {{%- set op_codes = ({"<":"lt", "<=":"le", "==":"eq", "!=":"ne", ">":"gt", ">=":"ge"}) -%}}
@@ -2014,6 +2033,7 @@ This macro creates a Bash conditional which uses dpkg to check if a package pass
 :param package: package name
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param ver: package version (optional argument, use together with "op")
+
 #}}
 {{%- macro bash_pkg_conditional_dpkg(package, op=None, ver=None) -%}}
 {{%- if ver -%}}
@@ -2054,6 +2074,7 @@ fi
 {{#
     Macro that lets you define the body of a loop that iterates over the output of the find command
     Use with the call block syntax {{% call iterate_over_find_output("fname", "mydir -name *.conf") %}} ...
+
 #}}
 {{% macro iterate_over_find_output(varname, find_args="") -%}}
 while IFS= read -r -d '' {{{ varname }}}; do
@@ -2065,6 +2086,7 @@ done <   <(find {{{ find_args }}} -print0)
 {{#
     Macro that lets you define the body of a loop that iterates over the output of any command
     Use with the call block syntax {{% call iterate_over_find_output("fname", "awk ... myfile") %}} ...
+
 #}}
 {{% macro iterate_over_command_output(varname, command_and_its_args) -%}}
 while IFS= read -r {{{ varname }}}; do
@@ -2222,6 +2244,7 @@ fi
     Macro used to check if authselect files are intact. When used, it will exit the respective
     script if any authselect file was modified without proper use of authselect tool and
     respective profiles.
+
 #}}
 {{% macro bash_check_authselect_integrity() -%}}
 if ! authselect check; then
@@ -2244,6 +2267,7 @@ fi
     enabled features. Custom profiles are only recommeded if an authselect feature for the same
     purpose is not available. In any case, this macro will also set the "CURRENT_PROFILE" variable
     which is also used in the "bash_ensure_pam_variables_and_authselect_profile" macro.
+
 #}}
 {{% macro bash_ensure_authselect_custom_profile() -%}}
 CURRENT_PROFILE=$(authselect current -r | awk '{ print $1 }')
@@ -2332,6 +2356,7 @@ fi
 
 {{#
     Macro to insert script to find a Python interpreter on the target system.
+
 #}}
 {{% macro find_python() -%}}
 
@@ -2350,6 +2375,7 @@ fi
 
 {{#
     Macro to insert script to find Mozilla Firefox location on the target system.
+
 #}}
 {{% macro find_firefox() -%}}
 
@@ -2373,6 +2399,7 @@ will be applied.
             (optional argument, use together with "op")
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param os_release_path: path to the os-release file, default: "/etc/os-release"
+
 #}}
 {{%- macro bash_os_linux_conditional(os_id, expected_ver=None, op=None, os_release_path="/etc/os-release") -%}}
 {{%- if expected_ver -%}}
@@ -2389,6 +2416,7 @@ operating system with the expected version using the given operator.
 :param expected: expected OS version, value of the VERSION_ID variable in /etc/os-release
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param os_release_path: path to the os-release file, default: "/etc/os-release"
+
 #}}
 {{%- macro bash_compare_version_os_linux(expected, op, os_release_path="/etc/os-release") -%}}
 { real="$({{{ bash_get_version_os_linux(os_release_path) }}})"; expected="{{{ expected }}}"; {{{ bash_compare_version("$real", op, "$expected") }}}; }
@@ -2399,6 +2427,7 @@ This macro generates code that retrieves the operating system version
 from /etc/os-release from VERSION_ID variable.
 
 :param os_release_path: path to the os-release file, default: "/etc/os-release"
+
 #}}
 {{%- macro bash_get_version_os_linux(os_release_path="/etc/os-release") -%}}
 grep -P "^VERSION_ID=[\"']?[\w.]+[\"']?$" {{{ os_release_path }}} | sed "s/^VERSION_ID=[\"']\?\([^\"']\+\)[\"']\?$/\1/"
