--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1537,7 +1537,6 @@ cce="{{{ cce_identifiers['cce'] }}}"
 
 #}}
 {{%- macro bash_replace_or_append(config_file, key, value, format='%s = %s') -%}}
-
 # Test if the config_file is a symbolic link. If so, use --follow-symlinks with sed.
 # Otherwise, regular sed command will do.
 sed_command=('sed' '-i')
@@ -1547,24 +1546,25 @@ fi
 
 # Strip any search characters in the key arg so that the key can be replaced without
 # adding any search characters to the config file.
-stripped_key=$(sed 's/[\^=\$,;+]*//g' <<< "{{{ key }}}")
+stripped_key="{{{ key }}}"
+stripped_key="${stripped_key//[$'^=$,;+']}"
 
 # shellcheck disable=SC2059
-printf -v formatted_output "{{{ format }}}" "$stripped_key" "{{{ value }}}"
+printf -v formatted_output "{{{ format }}}" "${stripped_key}" "{{{ value }}}"
 
 # If the key exists, change it. Otherwise, add it to the config_file.
 # We search for the key string followed by a word boundary (matched by \>),
 # so if we search for 'setting', 'setting2' won't match.
 if LC_ALL=C grep -q -m 1 -i -e "{{{ key }}}\\>" "{{{ config_file }}}"; then
-    escaped_formatted_output=$(sed -e 's|/|\\/|g' <<< "$formatted_output")
-    "${sed_command[@]}" "s/{{{ key }}}\\>.*/$escaped_formatted_output/gi" "{{{ config_file }}}"
+    {{{ bash_sed_escape_replacement("formatted_output", "escaped_formatted_output") }}}
+    "${sed_command[@]}" "s/{{{ key }}}\\>.*/${escaped_formatted_output}/gi" "{{{ config_file }}}"
 else
     # \n is precaution for case where file ends without trailing newline
-    {{% if cce_identifiers and 'cce' in cce_identifiers -%}}
+    {{%- if cce_identifiers and 'cce' in cce_identifiers %}}
     {{{ set_cce_value() }}}
-    printf '\n# Per %s: Set %s in %s\n' "$cce" "$formatted_output" "{{{ config_file }}}" >> "{{{ config_file }}}"
+    printf '\n# Per %s: Set %s in %s\n' "${cce}" "${formatted_output}" "{{{ config_file }}}" >> "{{{ config_file }}}"
     {{%- endif %}}
-    printf '%s\n' "$formatted_output" >> "{{{ config_file }}}"
+    printf '%s\n' "${formatted_output}" >> "{{{ config_file }}}"
 fi
 {{%- endmacro -%}}
 
